hphp/test/slow/coeffects/parse-lambda-1.php.expectf
Fatal error: A lambda cannot have polymorphic context in %s on line 4
